# DsQt

./: .clang-format  .gitattributes  .gitignore  Doxyfile  DsQmlEditableSource_8h_source.html  DsQmlPathHelper_8h_source.html  DsQmlTextMeasurer_8h_source.html  README.md  annotated.html  annotated_dup.js  b1  classDsGuiApplication-members.html  classDsGuiApplication.html  classDsQmlImguiItem-members.html  classDsQmlImguiItem.html  classDsQmlTextMeasurer-members.html  classDsQmlTextMeasurer.html  classDsQmlTextMeasurer.js  classFileMetaData.html  classQJsonModel-members.html  classQJsonModel.html  classQJsonModel.js  classQJsonTreeItem-members.html  classQJsonTreeItem.html  classResource.html  classdsqt_1_1DsEnvironment-members.html  classdsqt_1_1DsEnvironment.html  classdsqt_1_1DsFileMetaData-members.html  classdsqt_1_1DsFileMetaData.html  classdsqt_1_1DsQmlApplicationEngine-members.html  classdsqt_1_1DsQmlApplicationEngine.html  classdsqt_1_1DsQmlApplicationEngine.js  classdsqt_1_1DsQmlEditableSource-members.html  classdsqt_1_1DsQmlEditableSource.html  classdsqt_1_1DsQmlEnvironment-members.html  classdsqt_1_1DsQmlEnvironment.html  classdsqt_1_1DsQmlEnvironment.js  classdsqt_1_1DsQmlIdle-members.html  classdsqt_1_1DsQmlIdle.html  classdsqt_1_1DsQmlIdlePreventer-members.html  (+253 more)
Dsqt/: CMakeLists.txt  dsqtbase.cpp
Dsqt/Tests/: CMakeLists.txt  tst_dssettingstest.cpp  tst_settingstest.cpp
Dsqt/Tests/BridgeTest/: CMakeLists.txt
Dsqt/Tests/Settings/: tst_dssettingstest.cpp
Dsqt/bridge/: bridge_utility.cpp  bridge_utility.h  dsBridgeQuery.cpp  dsBridgeQuery.h
Dsqt/cmake/: .qmllint.in.ini  DsqtImport.cmake  FindDsqt.cmake  FindDsqt.in.cmake
Dsqt/core/: ds_qml_obj.cpp  ds_qml_obj.h  dsenvironment.cpp  dsenvironment.h  dsenvironmentqml.cpp  dsenvironmentqml.h  dsqmlapplicationengine.cpp  dsqmlapplicationengine.h  reloadurlinterceptor.cpp
Dsqt/model/: content_helper.cpp  content_model.cpp  content_model.h  property_map_diff.cpp  qmlcontentmodel.cpp  qmlcontentmodel.h  reference_map.h  resource.cpp
Dsqt/network/: dsnodewatcher.cpp  dsnodewatcher.h
Dsqt/qml/: DSAppBase.qml  DSScaleLoader.qml
Dsqt/qml/waffles/: DSRadialMenu2.qml  WaffleStage.qml
Dsqt/settings/: dssettings.cpp  dssettings.h  dssettings_base.cpp  dssettings_collections.cpp  dssettings_geom_glm.cpp  dssettings_proxy.cpp  dssettings_proxy.h  overload.h
Dsqt/src/: CMakeLists.txt
Dsqt/src/bridge/: dsBridgeQuery.cpp
Dsqt/src/core/: dsenvironment.cpp  dsenvironment.h  dsenvironmentqml.h  dsqmlapplicationengine.h  reloadurlinterceptor.h
Dsqt/src/model/: content_model.h  dsresource.h  qmlcontentmodel.cpp  reference_map.h
Dsqt/src/resources/: waffles.qrc
Dsqt/src/settings/: dssettings_geom_common.cpp  dssettings_qcolor.cpp
Dsqt/src/ui/: clustermanager.cpp  touchcluster.h
Dsqt/src/utility/: file_meta_data.cpp  url_image_loader.cpp
Dsqt/ui/: clustermanager.cpp  clustermanager.h  clusterview.cpp  clusterview.h  dsmenuitem.cpp  dsmenuitem.h  dsradialmenu.cpp  dsradialmenu.h  touchcluster.cpp  touchcluster.h
Examples/ClonerSource/: .gitignore  CMakeLists.txt  CMakePresets.json  Fnt.qml  Main.qml  README.md  main.cpp  project-ci.yml  resource1.h  vcpkg.json
Examples/ClonerSource/cmake/: app.rc.in  apphost.json.in  inno.iss.in  make_installer.bat.in
Examples/ClonerSource/docs/: installer_guide.md
Examples/ClonerSource/install/: base_install.iss  download_apphost.py  download_bridgesync.py  make_installer.bat
Examples/ClonerSource/qml/: ContentItem.qml  CustomClock.qml  Downstream.qml  Gallery.qml  IdleViewer.qml  MainView.qml  MediaViewerProxy.qml  Paul.qml  PlaylistPlayground.qml  Schedule.qml  Sizer.qml  Test.qml  TouchDesigner.qml
Examples/ClonerSource/settings/: app_settings.toml  engine.toml  logging.ini
Examples/DsqtApp/: CMakeLists.txt  CMakeUserPresets.json  Main.qml  main.cpp
Examples/DsqtApp/qml/: Gallery.qml  Sizer.qml
Examples/DsqtApp/settings/: asset_browser.toml  engine.examples.toml  engine.schema.json  engine.toml
Examples/TouchFilter/: CMakeLists.txt  Main.qml  main.cpp
Examples/TouchFilter/qml/: CustomClock.qml  MainView.qml  PanAndZoom.qml  TouchVisualizerView.qml
Examples/TouchFilter/settings/: app_settings.toml  engine.toml  touch_filter_settings.toml
Tools/ProjectCloner/: CMakeLists.txt  CMakePresets.json  ConsoleOutputView.qml  Main.qml  MainView.qml  cloner.cpp  cloner.h  consoleoutput.cpp  consoleoutput.h  git_ignore_checker.cpp  git_ignore_checker.h  main.cpp  skip.txt
Tools/ProjectCloner/ProjectSource/: README.md
dsqt/: CMakeLists.txt  conanfile.txt
dsqt/src/: CMakeLists.txt  dsqt.cpp
dsqt/src/dsqml/: CMakeLists.txt  dscontentmodel.cpp  dscontentmodel.h  dscontexthash.h
examples/dsqt-development/: .gitignore  CMakeLists.txt  clang-format.txt  conanfile.txt  dsqt-development.rc  main.cpp  resource.h
examples/dsqt-development/data/: New Text Document.txt
examples/dsqt-development/qml/: Sizer.qml  main.qml
examples/dsqt-development/settings/: app_settings.toml  asset_browser.toml  configuration.toml  engine.toml
modules/DsBridgeQuery/: CMakeLists.txt  bridge_service.cpp  bridge_service.h  bridge_sql_queries.h  bridge_utility.cpp  bridge_utility.h  dsBridgeQuery.cpp  dsBridgeQuery.h  nw_sql_queries.h
modules/DsSqlQuery/: CMakeLists.txt  dsNueWafflesQuery.cpp  dsNueWafflesQuery.h  dssqlquery.cpp  dssqlquery.h  nw_sql_queries.h  qmldir
modules/dsqml/: CMakeLists.txt  CMakeLists.txt.autosave.abQeni  Test.qml  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  dscontentmodel.h  dsenginesettings.cpp  dsenginesettings.h  dsenvironment.cpp  dsenvironment.h  dsqmlapplicationengine.cpp  dsqmlapplicationengine.h  dssettings.cpp  dssettings.h  dssettings_concepts.h
modules/dsqml/core/: dsenvironment.cpp  dsenvironment.h  dsqmlapplicationengine.cpp  dsqmlapplicationengine.h
modules/dsqml/model/: content_model.cpp  content_model.h  content_model_data.cpp  content_model_data.h  (+13 more)
modules/dsqt/: .clang-format  CMakeLists.txt  Findtomlplusplus.cmake  Test.qml  graph_info.json
test/DSQtTest/: CMakeLists.txt  foo.cpp  foo.h  tst_dssettingstest.cpp
(+684 files in other folders)
